# linketree

./: Dockerfile  LICENSE  README.md  pyproject.toml  st_functions.py  streamlit_app.py  style.css
.github/workflows/: aws.yml  deplo-ec2.yml  deploy-ec2.yml  docker-image.yml
app/: st_functions.py
app/style/: style.css
linktree/: Dockerfile  README.md  pyproject.toml
linktree/app/: streamlit_app.py
