[tool.poetry]
name = "linktree"
version = "0.1.0"
description = ""
authors = ["jhonylsab <114432490+Jhonylsab@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
